syntax = "proto3";

package rivet.backend.pkg.job_run.msg.nomad_monitor_alloc_plan;

import "proto/common.proto";

/// name = "msg-job-run-nomad-monitor-alloc-plan"
/// parameters = [
/// 	{ name = "dispatched_job_id" },
/// ]
message Message {
	string dispatched_job_id = 1;
	string payload_json = 2;
}
